# datamorph

./: .gitignore  README.md
.github/workflows/: ci.yml
js/: cli.js  package.json
js/src/: converters.js  index.js  pipeline.js  transforms.js  validators.js
python/: pyproject.toml
python/datamorph/: __init__.py  converters.py  pipeline.py  transforms.py  validators.py
tests/js/: test.js
tests/python/: test_datamorph.py
